@@ -27,6 +27,8 @@ New user-visible features
 Bugs fixed
 ----------
 
+- Bug 2992 - lte: Send method of the LteUeNetDevice doesn't use protocolNumber parameter
+
 Known issues
 ------------
 In general, known issues are tracked on the project tracker available
